gccida/c1/dump_sbitmap
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_sbitmap/src/sbitmap.c:1061:17: error: use of undeclared identifier 'off_607A24'
fprintf( file, &off_607A24[1], _bittest64( ( const __int64 *)&v8, v7)); 
                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_sbitmap/src/obj/sbitmap.o] Error 1
